--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "w-hc2png",
-  "version": "1.0.10",
-  "description": "A package for Highcharts to png.",
+  "version": "1.0.11",
   "main": "dist/w-hc2png.umd.js",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
@@ -9,7 +8,7 @@
     "json5": "^2.2.1",
     "lodash": "^4.17.21",
     "puppeteer": "^10.4.0",
-    "wsemi": "^1.6.54"
+    "wsemi": "^1.6.58"
   },
   "devDependencies": {
     "w-package-tools": "^1.0.65"
@@ -32,9 +31,5 @@
     "nodejs"
   ],
   "author": "yuda-lyu(semisphere)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/yuda-lyu/w-hc2png/issues"
-  },
-  "homepage": "https://github.com/yuda-lyu/w-hc2png#readme"
+  "license": "MIT"
 }
