--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "w-hc2png",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "main": "dist/w-hc2png.umd.js",
   "dependencies": {
     "@hapi/hapi": "^21.3.6",
     "highcharts": "^10.3.3",
     "json5": "^2.2.3",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "puppeteer": "^22.5.0",
     "wsemi": "^1.7.47"
   },
