--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "w-hc2png",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "main": "dist/w-hc2png.umd.js",
   "dependencies": {
-    "@hapi/hapi": "^21.3.7",
+    "@hapi/hapi": "^21.3.10",
     "highcharts": "^10.3.3",
     "json5": "^2.2.3",
     "lodash-es": "^4.17.21",
-    "puppeteer": "^22.6.0",
-    "wsemi": "^1.7.49"
+    "puppeteer": "^23.3.0",
+    "w-html2png": "^1.0.2",
+    "wsemi": "^1.7.58"
   },
   "devDependencies": {
     "w-package-tools": "^1.0.75"
   },
   "scripts": {
-    "test": "mocha --parallel --timeout 60000 --experimental-modules --es-module-specifier-resolution=node",
+    "test": "mocha --parallel --timeout 60000 --experimental-modules",
     "deploy": "gh-pages -d docs"
   },
   "repository": {
@@ -24,6 +25,7 @@
   "keywords": [
     "package",
     "tool",
+    "chromium",
     "Highcharts",
     "Highstock",
     "convert",
