--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "w-hc2png",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "main": "dist/w-hc2png.umd.js",
   "dependencies": {
-    "@hapi/hapi": "^21.3.12",
+    "@hapi/hapi": "^21.4.0",
     "highcharts": "^11.4.8",
     "json5": "^2.2.3",
     "lodash-es": "^4.17.21",
-    "puppeteer": "^23.8.0",
-    "w-html2png": "^1.0.3",
-    "wsemi": "^1.7.63"
+    "puppeteer": "^24.9.0",
+    "w-html2png": "^1.0.4",
+    "wsemi": "^1.7.90"
   },
   "devDependencies": {
-    "w-package-tools": "^1.0.80"
+    "w-package-tools": "^1.1.2"
   },
   "scripts": {
-    "test": "mocha --parallel --timeout 60000 --experimental-modules",
+    "test": "mocha --parallel --timeout 60000",
     "deploy": "gh-pages -d docs"
   },
   "repository": {
