--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "w-hc2png",
-  "version": "1.0.37",
+  "version": "1.0.38",
   "main": "dist/w-hc2png.umd.js",
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
+    "axios": "^1.10.0",
     "highcharts": "^11.4.8",
     "json5": "^2.2.3",
     "lodash-es": "^4.17.21",
-    "w-html2png": "^1.0.12",
-    "wsemi": "^1.8.5"
+    "w-html2png": "^1.0.16",
+    "wsemi": "^1.8.7"
   },
   "devDependencies": {
     "w-package-tools": "^1.1.2"
